force-app/main/default/objects/x7S_Product__c/x7S_Product__c.object-meta.xml
<CustomObject>
    <label>7S Product</label>
    <nameField>
        <label>7S Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>