force-app/main/default/objects/x7S_Product__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <formula>Product_Name__r.Additional_Info__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Info</label>
    <type>Text</type>
</CustomField>