force-app/main/default/objects/x7S_Product__c/fields/Appexchange_Listing__c.field-meta.xml
<CustomField>
    <fullName>Appexchange_Listing__c</fullName>
    <formula>Product_Name__r.Appexchange_Listing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appexchange Listing</label>
    <type>Text</type>
</CustomField>