force-app/main/default/objects/x7S_Product__c/fields/AppX_Formula__c.field-meta.xml
<CustomField>
    <fullName>AppX_Formula__c</fullName>
    <formula>IF(ISBLANK(Appexchange_Listing__c), &quot;&quot;, HYPERLINK(Appexchange_Listing__c, &quot;AppX&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AppX</label>
    <type>Text</type>
</CustomField>