force-app/main/default/objects/x7S_Product__c/fields/Battle_Card__c.field-meta.xml
<CustomField>
    <fullName>Battle_Card__c</fullName>
    <formula>Product_Name__r.Battle_Card__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battle Card</label>
    <type>Text</type>
</CustomField>