force-app/main/default/objects/x7S_Product__c/fields/Battle_Card_Formula__c.field-meta.xml
<CustomField>
    <fullName>Battle_Card_Formula__c</fullName>
    <formula>IF(ISBLANK(Battle_Card__c), &quot;&quot;, HYPERLINK( Battle_Card__c , &quot;Card&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BtlCard</label>
    <type>Text</type>
</CustomField>