force-app/main/default/objects/x7S_Product__c/fields/Bitbucket_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bitbucket_Formula__c</fullName>
    <formula>IF(ISBLANK(Bitbucket_Repository__c), &quot;&quot;, HYPERLINK( Bitbucket_Repository__c , &quot;Repo&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repo</label>
    <type>Text</type>
</CustomField>