force-app/main/default/objects/x7S_Product__c/fields/Bitbucket_Repository__c.field-meta.xml
<CustomField>
    <fullName>Bitbucket_Repository__c</fullName>
    <formula>Product_Name__r.Bitbucket_Repository__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bitbucket Repository</label>
    <type>Text</type>
</CustomField>