force-app/main/default/objects/x7S_Product__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <formula>Product_Name__r.Bundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle</label>
    <type>Checkbox</type>
</CustomField>