force-app/main/default/objects/x7S_Product__c/fields/Child_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Product_Count__c</fullName>
    <formula>Product_Name__r.Child_Product_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>