force-app/main/default/objects/x7S_Product__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <formula>Product_Name__r.Launch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>