force-app/main/default/objects/x7S_Product__c/fields/Learning_Path__c.field-meta.xml
<CustomField>
    <fullName>Learning_Path__c</fullName>
    <formula>HYPERLINK(Product_Name__r.Learning_Path__c, Product_Name__r.Learning_Path__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learning Path</label>
    <type>Text</type>
</CustomField>