force-app/main/default/objects/x7S_Product__c/fields/LEX_Compatible__c.field-meta.xml
<CustomField>
    <fullName>LEX_Compatible__c</fullName>
    <formula>Product_Name__r.LEX_Compatible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEX Compatible</label>
    <type>Checkbox</type>
</CustomField>