force-app/main/default/objects/x7S_Product__c/fields/LWC__c.field-meta.xml
<CustomField>
    <fullName>LWC__c</fullName>
    <formula>Product_Name__r.LWC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LWC</label>
    <type>Checkbox</type>
</CustomField>