force-app/main/default/objects/x7S_Product__c/fields/Marketing_Slides__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Slides__c</fullName>
    <formula>Product_Name__r.Marketing_Slides__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Slides</label>
    <type>Text</type>
</CustomField>