force-app/main/default/objects/x7S_Product__c/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <formula>Product_Name__r.Bundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pack?</label>
    <type>Checkbox</type>
</CustomField>