force-app/main/default/objects/x7S_Product__c/fields/Price_Short__c.field-meta.xml
<CustomField>
    <fullName>Price_Short__c</fullName>
    <formula>IF(Price__c &gt; 0, TEXT(Price__c/1000) &amp; &apos;K&apos;, &apos;N/A&apos;)</formula>
    <label>$</label>
    <type>Text</type>
</CustomField>