force-app/main/default/objects/x7S_Product__c/fields/Product_10__c.field-meta.xml
<CustomField>
    <fullName>Product_10__c</fullName>
    <formula>Product_Name__r.Product_10__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product #10</label>
    <type>Text</type>
</CustomField>