force-app/main/default/objects/x7S_Product__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <formula>Product_Name__r.Product_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product #1</label>
    <type>Text</type>
</CustomField>