force-app/main/default/objects/x7S_Product__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <formula>Product_Name__r.Product_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product #2</label>
    <type>Text</type>
</CustomField>