force-app/main/default/objects/x7S_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Products_Services</relationshipName>
    <type>Lookup</type>
</CustomField>