force-app/main/default/objects/x7S_Product__c/fields/Setup_Guide__c.field-meta.xml
<CustomField>
    <fullName>Setup_Guide__c</fullName>
    <formula>Product_Name__r.Setup_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setup Guide</label>
    <type>Text</type>
</CustomField>