force-app/main/default/objects/x7S_Product__c/fields/Slides_Formula__c.field-meta.xml
<CustomField>
    <fullName>Slides_Formula__c</fullName>
    <formula>IF(ISBLANK(Marketing_Slides__c), &quot;&quot;, HYPERLINK(Marketing_Slides__c , &quot;Slides&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slides</label>
    <type>Text</type>
</CustomField>