force-app/main/default/objects/x7S_Product__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <formula>Product_Name__r.Training__c</formula>
    <label>Training</label>
    <type>Text</type>
</CustomField>