force-app/main/default/objects/x7S_Product__c/fields/Video_Formula__c.field-meta.xml
<CustomField>
    <fullName>Video_Formula__c</fullName>
    <formula>IF(ISBLANK(Primary_Video__c), &quot;&quot;, HYPERLINK(Primary_Video__c, &quot;Video&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video</label>
    <type>Text</type>
</CustomField>