force-app/main/default/objects/x7S_Product__c/fields/Video_List_7s__c.field-meta.xml
<CustomField>
    <fullName>Video_List_7s__c</fullName>
    <formula>Product_Name__r.Video_List_7s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video_List_7s</label>
    <type>Text</type>
</CustomField>