force-app/main/default/objects/x7S_Product__c/listViews/Active_IP_List_Bolts.listView-meta.xml
<ListView>
    <fullName>Active_IP_List_Bolts</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>LEX_Formula__c</columns>
    <columns>Launch_Formula__c</columns>
    <columns>Slides_Formula__c</columns>
    <columns>Guide_Formula__c</columns>
    <columns>Video_Formula__c</columns>
    <columns>AppX_Formula__c</columns>
    <columns>Battle_Card_Formula__c</columns>
    <columns>Bitbucket_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Launch_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>startsWith</operation>
        <value>Bolt-</value>
    </filters>
    <label>Active IP List: Bolts</label>
</ListView>