force-app/main/default/objects/x7S_Product__c/listViews/Hive_2_0_View.listView-meta.xml
<ListView>
    <fullName>Hive_2_0_View</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Child_Product_Count__c</columns>
    <columns>AppX_Formula__c</columns>
    <columns>Slides_Formula__c</columns>
    <columns>Video_Formula__c</columns>
    <columns>Guide_Formula__c</columns>
    <columns>Training__c</columns>
    <columns>Battle_Card_Formula__c</columns>
    <columns>Bitbucket_Formula__c</columns>
    <columns>Launch_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Launch_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Active IP List: Hive View</label>
</ListView>